tests/mediawiki/fail/includes/DefaultSettings.php
/** MediaWiki version number */
$wgVersion                      = '1.11.0';

